--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main>
         
-        <section>
+        <section class="section-1">
 
             <textarea cols="5" rows="5" class="input-texto" placeholder="Ingrese el texto que desea encriptar..." maxlength="500"></textarea>
 
@@ -36,7 +36,7 @@
 
         </section>
 
-        <section>
+        <section class="section-2">
             <textarea cols="5" rows="5" class="mensaje" placeholder="Ningún mensaje fue encontrado" readonly></textarea>
 
             <div class="btn-copiar">
@@ -52,9 +52,12 @@
 </body>
 
 <footer>
-    <a href="https://www.linkedin.com/in/reynaldo-faria-dev/" target="_blank"><img src="imagenes/linkedin-logo.png" class="linkedin-logo"></a>
-    <a href="https://github.com/reyfaria" target="_blank"><img src="imagenes/github-logo.png" class="github-logo"></a>
-    <p class="copyright"> © Made by Reynaldo Faria - 2022 </p>      
+    <div class="rrss-logo">
+        <a href="https://www.linkedin.com/in/reynaldo-faria-dev/" target="_blank"><img src="imagenes/linkedin-logo.png" class="linkedin-logo"></a>
+        <a href="https://github.com/reyfaria" target="_blank"><img src="imagenes/github-logo.png" class="github-logo"></a>
+    </div>
+    
+    <p class="copyright"> © Reynaldo Faria - 2022 </p>      
 </footer>
 
 </html>
